assets/css/main.css
/* ... */
/* Work Item */

	.work-item {
		margin: 0 0 2em 0;
	}

		.work-item .image {
			margin: 0 0 1.5em 0;
		}

		.work-item h3 {
			font-size: 1em;
			margin: 0 0 0.5em 0;
		}

		.work-item b {
			text-transform: capitalize;
			font-family: 'Kreon', serif;
		}

		.work-item #product {
			font-size: 0.9em;
			text-transform: capitalize;
			font-family: 'Josefin Sans', sans-serif;
		}

		#small-text-R {
			font-size: 0.85em;
			font-style: italic;
			float: right;
		}
		#small-text-L {
			font-size: 0.85em;
			font-style: italic;
			float: left;
		}
				
		.work-item #status {
			font-style: bold;
			font-size: 1em;
			font-family: 'Economica', sans-serif;
		}

		.work-item #platform, .work-item #language {
			font-size: 0.95em;
			font-family: 'Economica', sans-serif;
			line-height: 0.5em;
		}

		.work-item #playButtons {
			font-style: bold;
			font-size: 1em;
			font-family: 'Economica', sans-serif;
		}

		.img-link, #top {
			border-bottom: dotted 0px;
			text-decoration: none;
		}

		.work-item p {
			font-size: 0.9em;
			line-height: 1.5em;
			margin: 0;
		}

/* Header */

	#header {
		background-color: #1f1815;
		background-attachment: scroll,								fixed;
		background-image: url("images/overlay.png"), url("../../images/bg.jpg");
		background-position: top left,							top left;
		background-repeat: repeat,								no-repeat;
		background-size: auto,								auto 100%;
		color: rgba(255, 255, 255, 0.5);
		height: 100%;
		left: 0;
		padding: 8em 4em 0 0;
		position: fixed;
		text-align: right;
		top: 0;
		width: 35%;
	}

		#header strong, #header b {
			color: #ffffff;
		}

		#header h2, #header h3, #header h4, #header h5, #header h6 {
			color: #ffffff;
		}

		#header h1 {
			color: rgba(255, 255, 255, 0.5);
			font-size: 1.35em;
			line-height: 1.75em;
			margin: 0;
		}

		#header .image.avatar {
			margin: 0 0 1em 0;
			width: 6.25em;
		}

/* Footer */

	#footer {
		bottom: 0;
		left: 0;
		padding: 0 4em 6em 0;
		position: fixed;
		text-align: right;
		width: 35%;
/*		background-color: rgba(0, 0, 0, 0.2);*/
	}

		#footer .icons {
			margin: 1em 0 0 0;
		}

			#footer .icons a {
				color: rgba(255, 255, 255, 0.4);
				
			}

		#footer .copyright {
			color: rgba(255, 255, 255, 0.4);
			font-size: 0.8em;
			list-style: none;
			margin: 1em 0 0 0;
			padding: 0;
		}

		#footer .copyright {
			text-transform: initial;
			font-family: 'Economica', sans-serif;
		}

			#footer .copyright li {
				border-left: solid 1px rgba(255, 255, 255, 0.25);
				display: inline-block;
				line-height: 1em;
				margin-left: 0.75em;
				padding-left: 0.75em;
			}

				#footer .copyright li:first-child {
					border-left: 0;
					margin-left: 0;
					padding-left: 0;
				}

				#footer .copyright li a {
					color: inherit;
				}

/* Main */

	#main {
		margin-left: 35%;
		max-width: 54em;
		padding: 2.5em 4em 4em 4em;
		width: calc(100% - 35%);
	}

		#main > section {
			border-top: solid 1px #efefef;
			margin: 1.25em 0 0 0;
			padding: 1.25em 0 0 0;
		}

			#main > section:first-child {
				border-top: 0;
				margin-top: 0;
				padding-top: 0;
			}

/* Poptrox */

	@-moz-keyframes spin {
		0% {
			-moz-transform: rotate(0deg);
			-webkit-transform: rotate(0deg);
			-ms-transform: rotate(0deg);
			transform: rotate(0deg);
		}

		100% {
			-moz-transform: rotate(360deg);
			-webkit-transform: rotate(360deg);
			-ms-transform: rotate(360deg);
			transform: rotate(360deg);
		}
	}

	@-webkit-keyframes spin {
		0% {
			-moz-transform: rotate(0deg);
			-webkit-transform: rotate(0deg);
			-ms-transform: rotate(0deg);
			transform: rotate(0deg);
		}

		100% {
			-moz-transform: rotate(360deg);
			-webkit-transform: rotate(360deg);
			-ms-transform: rotate(360deg);
			transform: rotate(360deg);
		}
	}

	@-ms-keyframes spin {
		0% {
			-moz-transform: rotate(0deg);
			-webkit-transform: rotate(0deg);
			-ms-transform: rotate(0deg);
			transform: rotate(0deg);
		}

		100% {
			-moz-transform: rotate(360deg);
			-webkit-transform: rotate(360deg);
			-ms-transform: rotate(360deg);
			transform: rotate(360deg);
		}
	}

	@keyframes spin {
		0% {
			-moz-transform: rotate(0deg);
			-webkit-transform: rotate(0deg);
			-ms-transform: rotate(0deg);
			transform: rotate(0deg);
		}

		100% {
			-moz-transform: rotate(360deg);
			-webkit-transform: rotate(360deg);
			-ms-transform: rotate(360deg);
			transform: rotate(360deg);
		}
	}

	.poptrox-popup {
		-moz-box-sizing: content-box;
		-webkit-box-sizing: content-box;
		-ms-box-sizing: content-box;
		box-sizing: content-box;
		-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
		background: #fff;
		border-radius: 0.35em;
		box-shadow: 0 0.1em 0.15em 0 rgba(0, 0, 0, 0.15);
		overflow: hidden;
		padding-bottom: 3em;
	}

		.poptrox-popup .loader {
			text-decoration: none;
			-moz-animation: spin 1s linear infinite;
			-webkit-animation: spin 1s linear infinite;
			-ms-animation: spin 1s linear infinite;
			animation: spin 1s linear infinite;
			font-size: 1.5em;
			height: 1em;
			left: 50%;
			line-height: 1em;
			margin: -0.5em 0 0 -0.5em;
			position: absolute;
			top: 50%;
			width: 1em;
		}

			.poptrox-popup .loader:before {
				-moz-osx-font-smoothing: grayscale;
				-webkit-font-smoothing: antialiased;
				font-family: FontAwesome;
				font-style: normal;
				font-weight: normal;
				text-transform: none !important;
			}

			.poptrox-popup .loader:before {
				content: '\f1ce';
			}

		.poptrox-popup .caption {
			background: #fff;
			bottom: 0;
			cursor: default;
			font-size: 0.9em;
			height: 3em;
			left: 0;
			line-height: 2.8em;
			position: absolute;
			text-align: center;
			width: 100%;
			z-index: 1;
		}
/* ... */

